--- a/mainPage/templates/mainPage/base.html
+++ b/mainPage/templates/mainPage/base.html
@@ -15,6 +15,11 @@
 
 <body>
 <div class="container">
+    <div id="demo">
+      <div id="demoBackground">
+        <div id="logo"></div>
+        <div id="txtContainer"></div>
+    </div>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3" id="slipToLeft_1">
             <h3>Cветовые объемные буквы</h3>
@@ -59,7 +64,7 @@
 </div>
 
 <script src="{% static 'mainPage/bootstrap/js/bootstrap.min.js' %}"></script>
-<script src="{% static 'mainPage/js/jquery-3.1.1.min.js' %}"></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src="{% static 'mainPage/js/TweenMax.min.js' %}"></script>
 <script src="{% static 'mainPage/js/index.js' %}"></script>
 </body>
