изменено:      db.sqlite3 	изменено:      mainPage/__pycache__/admin.cpython-35.pyc 	изменено:      mainPage/__pycache__/models.cpython-35.pyc 	изменено:      mainPage/__pycache__/views.cpython-35.pyc 	изменено:      mainPage/admin.py 	новый файл:    mainPage/migrations/0001_initial.py 	новый файл:    mainPage/migrations/__pycache__/0001_initial.cpython-35.pyc 	изменено:      mainPage/models.py 	изменено:      mainPage/static/mainPage/css/style.css 	изменено:      mainPage/static/mainPage/js/index.js 	новый файл:    mainPage/static/mainPage/js/jquery.visible.min.js 	новый файл:    mainPage/static/mainPage/js/test.js 	новый файл:    mainPage/static/mainPage/js/testtest.js 	изменено:      mainPage/templates/mainPage/base.html 	изменено:      mainPage/views.py

--- a/mainPage/templates/mainPage/base.html
+++ b/mainPage/templates/mainPage/base.html
@@ -13,48 +13,20 @@
     <link href="{% static 'mainPage/css/style.css' %}" rel="stylesheet">
 </head>
 
-<body>
+<body  class="scrolling">
+<div style="text-align: center;">
+    <div id="txtContainer"></div>
+</div>
 <div class="container">
-    <div id="demo">
-      <div id="demoBackground">
-        <div id="logo"></div>
-        <div id="txtContainer"></div>
-    </div>
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3" id="slipToLeft_1">
-            <h3>Cветовые объемные буквы</h3>
-            <p>одна из разновидностей технологий рекламных вывесок. И эта технология целиком оправдывает себя. Вдобавок,
-                вывески, содержащие объемные буквы и светодиодные объемные буквы отлично зарекомендовали себя в наших
-                климатических условиях. Вдобавок, технология изготовления объемных букв позволяет производить их
-                совершенного разных размеров: от нескольких сантиметров до нескольких метров. А объемные световые буквы
-                смотрятся просто замечательно! Компания «Наружка-НСК» давно и весьма успешно занимается изготовлением
-                объемных букв.</p>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3" id="slipToLeft_2">
-            <h3>Вывески</h3>
-            <p>рекламные изделия, которые обычно размещаются над входом в здание и являются "обложкой" организации.
-                Первое впечатление о заведении у клиента оставляет именно вывеска. Рекламные вывески изготавливаются из
-                различных материалов.
-            </p>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3" id="slipToLeft_3">
-            <h3>Светодиодные бегущие строки</h3>
-            <p>яркий современный вид наружной рекламы. Светодиодные табло, в отличие от статических видов рекламых
-                носителей, способны в несколько раз эффективнее привлекать потенциальных клиентов. А простота управления
-                позволит настроить бегущую строку под Ваши нужды (в программе, поставляемой в комплекте с изделием,
-                разобраться не сложнее, чем с офисной программой, тем более наш специалист подробно научит Вас ей
-                пользоваться).
-            </p>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3" id="slipToLeft_4">
-            <h3>Световые короба или лайтбоксы</h3>
-            <p>Данные изделия внешне хорошо смотрятся, благодаря разнообразию возможных вариантов дизайна прекрасно
-                дополняют другие рекламные элементы и могут использоваться для оформления вывесок и витрин, размещаться
-                в фойе кинозалов, выставочных центров, на крышах и фасадах зданий и т.д. Одним словом, лайтбоксы –
-                практически универсальное рекламное средство, но самое главное, они отлично справляются со своей
-                основной задачей – привлечь внимание потребителя.
-            </p>
-        </div>
+        {% for article in articles %}
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                <div class="more comment">
+                    <h3>{{ article.title }}</h3>
+                    {{ article.get_text }}
+                </div>
+            </div>
+        {% endfor %}
     </div>
 </div>
 
@@ -66,6 +38,7 @@
 <script src="{% static 'mainPage/bootstrap/js/bootstrap.min.js' %}"></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src="{% static 'mainPage/js/TweenMax.min.js' %}"></script>
+<script src="{% static 'mainPage/js/jquery.visible.min.js' %}"></script>
 <script src="{% static 'mainPage/js/index.js' %}"></script>
 </body>
 </html>
