--- a/mainPage/static/mainPage/css/style.css
+++ b/mainPage/static/mainPage/css/style.css
@@ -1,7 +1,3 @@
-.main-content {
-    margin-top: 100px;
-}
-
 #slipToLeft_1, #slipToLeft_2, #slipToLeft_3, #slipToLeft_4 {
     left: 1980px;
     background: gray;
@@ -12,37 +8,15 @@ body {
     background: -webkit-linear-gradient(left, #ed30a0 0%, #0b86a6 100%);
     background: linear-gradient(to right, #ed30a0 0%, #0b86a6 100%);
 }
-
-#demo {
-	width: 692px;
-	height: 100px;
-	background-color: #333;
-	padding: 8px;
+.morecontent span {
+	display: none;
 }
-#demoBackground {
-	position: relative;
-
-	width: 692px;
-	height: 100px;
-	visibility:hidden;
-}
-#logo {
-	position: absolute;
-	background: url(../images/logo.png) no-repeat;
-	height: 90px;
-	width: 90px;
-	top: 6px;
-}
-#txtContainer {
-	position: absolute;
-	left: 100px;
-	top: 14px;
+.more{
+    opacity: 0;
 }
 .txt {
 	font: 68px monospace;
-	position: absolute;
 	color: #afafaf;
 	font-weight: bold;
-	left: 0px;
-	top: 0;
+    display: inline-block;
 }
