--- a/mainPage/static/mainPage/css/style.css
+++ b/mainPage/static/mainPage/css/style.css
@@ -4,18 +4,22 @@ body {
     animation: backgroundAnimation 7s ease;
 }
 
-/*.morecontent span {*/
-/*display: none;*/
-/*}*/
+.header-brand {
+    position: absolute;
+    width: 70%;
+    left: 15%;
+    top: 10px;
+    text-align: center;
+    margin: auto;
+}
 
-/*.more {*/
-    /*opacity: 1;*/
-/*}*/
+.morecontent span {
+    display: none;
+}
 
 .txt {
-    font: 25px monospace;
-    color: #afafaf;
-    float: left;
+    font: 23px monospace;
+    color: #0b86a6;
     font-weight: bold;
     display: inline-block;
 }
@@ -23,12 +27,9 @@ body {
 .cs3 {
     width: 600px;
     height: 300px;
-    margin: 0 auto 100px;
+    margin: 0 auto 20px;
 }
-.wrapper {
-	width: 800px;
-	margin: 0 auto;
-}
+
 @keyframes backgroundAnimation {
     0% {
         background-position: 0% 0%
@@ -40,6 +41,7 @@ body {
         background-position: 0% 0%
     }
 }
+
 /*/////////////////////////////////////////*/
 .animation-element.slide-left {
     opacity: 0;
@@ -67,95 +69,31 @@ body {
 
 .animation-element.slide-left.testimonial {
     float: left;
-    width: 47%;
     margin: 0% 1.5% 3% 1.5%;
     background: #F5F5F5;
     padding: 15px;
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.4);
     border: solid 1px #EAEAEA;
-}
-
-.animation-element.slide-left.testimonial .header {
-    float: left;
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.animation-element.slide-left.testimonial .left {
-    float: left;
-    margin-right: 15px;
-}
-
-.animation-element.slide-left.testimonial .right {
-    float: left;
+    text-align: center;
 }
 
 .animation-element.slide-left.testimonial img {
-    width: 65px;
-    height: 65px;
+    width: 85px;
+    height: 85px;
     border-radius: 50%;
-    box-shadow: 0px 1px 3px rgba(51, 51, 51, 0.5);
-}
-
-.animation-element.slide-left.testimonial h3 {
-    margin: 0px 0px 5px 0px;
-}
-
-.animation-element.slide-left.testimonial h4 {
-    margin: 0px 0px 5px 0px;
-}
-
-.animation-element.slide-left.testimonial .content {
-    float: left;
-    width: 100%;
-    margin-bottom: 10px;
+    margin: 0 auto;
+    box-shadow: 5px 5px 5px rgba(51, 51, 51, 0.8);
 }
 
 /*media queries for small devices*/
-@media screen and (max-width: 678px) {
-    /*testimonials*/
-    .animation-element.slide-left.testimonial {
-        width: 100%;
-        margin: 0px 0px 20px 0px;
+@media screen and (max-width: 767px) {
+    .cs3 {
+        width: 90vw;
+        height: 45vw;
     }
 
-    .animation-element.slide-left.testimonial .right,
-    .animation-element.slide-left.testimonial .left,
-    .animation-element.slide-left.testimonial .content,
-    .animation-element.slide-left.testimonial .rating {
-        text-align: center;
-        float: none;
+    .txt {
+        font: 28px tabular-nums;
+        font-weight: bold;
     }
-
-    .animation-element.slide-left.testimonial img {
-        width: 85px;
-        height: 85px;
-        margin-bottom: 5px;
-    }
-
-    .cs3{
-        width: 80vw;
-        height: 40vw;
-    }
-}
-@media screen and (min-width: 1200px) {
-    /*testimonials*/
-    .animation-element.slide-left.testimonial {
-        width: 23%;
-        margin: 10px 10px 10px 10px;
-    }
-
-    .animation-element.slide-left.testimonial .right,
-    .animation-element.slide-left.testimonial .left,
-    .animation-element.slide-left.testimonial .content,
-    .animation-element.slide-left.testimonial .rating {
-        text-align: center;
-        float: none;
-    }
-
-    /*.animation-element.slide-left.testimonial img {*/
-        /*width: 85px;*/
-        /*height: 85px;*/
-        /*margin-bottom: 5px;*/
-    /*}*/
 }
