--- a/mainPage/templates/mainPage/base.html
+++ b/mainPage/templates/mainPage/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name=viewport content="width=device-width, initial-scale=1">
 
     <title>{% block title %}{% endblock %}</title>
 
@@ -20,6 +21,7 @@
 {% block navbar %}
     {% include 'mainPage/nav_bar.html' %}
 {% endblock %}
+
 {% block content %}
 
 {% endblock %}
