--- a/mainPage/templates/mainPage/home.html
+++ b/mainPage/templates/mainPage/home.html
@@ -11,20 +11,22 @@
     {% if chopslider.count %}
         <link href="{% static 'mainPage/cs3/idangerous.chopslider-3.4.css' %}" rel="stylesheet">
         <script src="{% static 'mainPage/cs3/idangerous.chopslider-3.4.min.js' %}"></script>
-        <div class="container">
-            <div class="cs3-wrap cs3-skin-no">
-                <div class="cs3 cs3-9">
-                    {% for cs in chopslider %}
-                        <div class="cs3-slide"><img src="{{ MEDIA_URL }}{{ cs.img }}"/></div>
-                    {% endfor %}
-                    <div class="cs3-slide-prev"></div>
-                    <div class="cs3-slide-next"></div>
-                    <div class="cs3-pagination-wrap">
-                        <div class="cs3-pagination"></div>
+{#        <div class="container-fluid">#}
+{#            <div class="row">#}
+                <div class="cs3-wrap cs3-skin-no ">
+                    <div class="cs3 cs3-9">
+                        {% for cs in chopslider %}
+                            <div class="cs3-slide"><img src="{{ MEDIA_URL }}{{ cs.img }}"/></div>
+                        {% endfor %}
+                        <div class="cs3-slide-prev"></div>
+                        <div class="cs3-slide-next"></div>
+                        <div class="cs3-pagination-wrap">
+                            <div class="cs3-pagination"></div>
+                        </div>
                     </div>
-                </div>
+{#                </div>#}
             </div>
-        </div>
+{#        </div>#}
         <script>
             var cs3 = $('.cs3').cs3({
                 pagination: {
@@ -47,22 +49,25 @@
 
 
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             {% for article in articles %}
-                <div class="animation-element slide-left testimonial">
-                    <div class="header">
-                        <div class="left">
-                            <img src="{{ MEDIA_URL }}{{ article.img }}"/>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="animation-element slide-left testimonial">
+                        <div class="header">
+                            <div class="left">
+                                <img src="{{ MEDIA_URL }}{{ article.img }}"/>
+                            </div>
+                            <div class="right">
+                                <h3>{{ article.title }}</h3>
+                            </div>
                         </div>
-                        <div class="right">
-                            <h3>{{ article.title }}</h3>
+                        <div class="content">
+                            <h5 class="more">{{ article.get_text }}</h5>
                         </div>
-                    </div>
-                    <div class="content">
-                        <h5 class="more">{{ article.get_text }}</h5>
                     </div>
                 </div>
+                <div class="{% cycle  'clearfix visible-xs' 'clearfix visible-sm' 'clearfix visible-md' 'clearfix visible-lg' %}"></div>
             {% endfor %}
         </div>
     </div>
